<?xml version="1.0"?>
<package format="2">
  
  <name>tangent_planner</name>
  <version>1.0.0</version>
  <description>The tangent_planner package</description>

  <maintainer email="ibrahim.jad@outlook.dk">Ibrahim Jad Masri</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>pluginlib</exec_depend>


  <export>
        <nav_core plugin="${prefix}/tangent_planner_plugin.xml" />
  </export>

</package>